@@ -1,5 +1,5 @@
 #! /bin/sh -vx
-# $Id: mendex.test 73805 2025-02-09 11:57:47Z ymorimi $
+# $Id: mendex.test 74133 2025-02-19 15:04:55Z takuji $
 # Copyright 2014-2024 Japanese TeX Development Community <issue@texjp.org>
 # Copyright 2017-2022 Karl Berry <tex-live@tug.org>
 # Copyright 2013 Peter Breitenlohner <tex-live@tug.org>
@@ -33,6 +33,20 @@ cat $srcdir/tests/uni.idx | \
 $_mendex -U -d $srcdir/tests/uni.dict -s $srcdir/tests/uni1.ist -s $srcdir/tests/uni2.ist \
 	$srcdir/tests/uni.idx -o uni.ind3 -t uni.ilg3 \
 	&& diff $srcdir/tests/uni.ind uni.ind3 || rc=5
+
+INDEXSTYLE=$srcdir/tests
+export INDEXSTYLE
+
+$_mendex -U -d $srcdir/tests/uni.dict -s uni.ist \
+	$srcdir/tests/uni.idx -o uni.ind4 -t uni.ilg4 \
+	&& diff $srcdir/tests/uni.ind uni.ind4 || rc=6
+
+INDEXDICTIONARY=$srcdir/tests
+export INDEXDICTIONARY
+
+$_mendex -U -d uni.dict -s uni.ist \
+	$srcdir/tests/uni.idx -o uni.ind5 -t uni.ilg5 \
+	&& diff $srcdir/tests/uni.ind uni.ind5 || rc=7
 
 $_mendex $srcdir/tests/tort.idx -o tort.ind1 -t tort.ilg1 \
 	&& rc=20
