@@ -1,3 +1,8 @@
+2025-02-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uptex-m.ch: Check code range of ^^^^xyzw.
+	Thanks to Takayuki YATO.
+
 2025-02-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* uptex-m.ch: Increase size of auto_xsp_code().
