@@ -1,3 +1,7 @@
+2025-02-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/mendex.test: Add tests.
+
 2025-02-18  Yukimasa Morimi  <h20y6m@yahoo.co.jp>
 
 	* convert.c, kp.{c,h}, styfile.c:
